# salon-reminder-bot

./: app.py  pyproject.toml
salon/: cli.py  message.py  models.py  storage.py
salon/commands/: add.py  list.py
templates/: index.html
tests/: test_add.py  test_message.py  test_storage.py
